--- a/Changes
+++ b/Changes
@@ -3,3 +3,6 @@ Revision history for Graphics-Asymptote
 0.0.1  Thu Oct  8, 2009
        Initial release.
 
+0.0.2  Tue Oct 20, 2009
+       Added dependency on asy, handled in Build.PL (http://wiki.cpantesters.org/wiki/CPANAuthorNotes)
+       Also fixed a couple of documentation nits.
